# machina

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  README.zh.md
.agents/: README.md
.agents/skills/machina-build/: SKILL.md
.agents/skills/machina-code-explorer/: SKILL.md
.agents/skills/machina-code-reviewer/: SKILL.md
.agents/skills/machina-issue-helper/: SKILL.md
.agents/skills/machina-qemu-oracle/: SKILL.md
.agents/skills/machina-testing/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: machina-tests.yml  rcore-smoke.yml  riscv-tests.yml  tg-rcore-tutorial.yml
accel/: Cargo.toml
accel/src/: code_buffer.rs  constraint.rs  cpu.rs  lib.rs  liveness.rs  optimize.rs  regalloc.rs  translate.rs
accel/src/exec/: arch_exit.rs  exec_loop.rs  mod.rs  tb_store.rs
accel/src/ir/: context.rs  dump.rs  ir_builder.rs  mod.rs  op.rs  opcode.rs  serialize.rs  tb.rs  temp.rs
accel/src/x86_64/: codegen.rs  constraints.rs  emitter.rs  regs.rs
core/: Cargo.toml
core/src/: address.rs  cpu.rs  device_cell.rs  lib.rs  machine.rs  mobject.rs  monitor.rs  wfi.rs
decode/src/: lib.rs
disas/src/: riscv.rs
docs/: design.md  os2atc-script.md  os2atc-slides.md  testing.md
docs/en/: architecture.md  getting-started.md  reference.md
docs/superpowers/plans/: 2026-05-08-k230-qemu-parity-plan.md
docs/superpowers/specs/: 2026-05-05-qemu-hw-translation-design.md  2026-05-08-k230-qemu-parity-design.md
docs/zh/: architecture.md  getting-started.md  reference.md  start-from-zero.md
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/src/riscv/: mod.rs
gdbstub/: Cargo.toml
gdbstub/src/: handler.rs  lib.rs  protocol.rs  server.rs  target.rs
guest/loongarch/: Cargo.toml  build.rs
guest/loongarch/src/: lib.rs
guest/loongarch/src/loongarch/: cpu.rs  csr.rs  exception.rs  ext.rs  insn.decode  insn_decode.rs  mmu.rs  mod.rs
guest/loongarch/src/loongarch/trans/: gen_common.rs  gen_float.rs  helpers.rs  mod.rs
guest/riscv/: build.rs
guest/riscv/tests/: csr_tests.rs  exception_tests.rs  mmu_tests.rs  pmp_tests.rs
hw/char/: Cargo.toml
hw/char/src/: lib.rs  pl011.rs  riscv_htif.rs  sifive_uart.rs  uart.rs
hw/char/tests/: uart_tests.rs
hw/core/: Cargo.toml
hw/core/macros/: Cargo.toml
hw/core/macros/src/: lib.rs
hw/core/src/: bus.rs  chardev.rs  clock.rs  fdt.rs  irq.rs  lib.rs  loader.rs  mdev.rs  qdev.rs  reset.rs  typeinfo.rs
hw/core/tests/: chardev_tests.rs  loader_tests.rs
hw/dma/: Cargo.toml
hw/dma/src/: lib.rs  pl080.rs  sifive_pdma.rs
hw/firmware/: Cargo.toml
hw/firmware/src/: lib.rs
hw/gpio/: Cargo.toml
hw/gpio/src/: gpio_key.rs  gpio_pwr.rs  lib.rs  pl061.rs  sifive_gpio.rs
hw/i2c/: Cargo.toml
hw/i2c/src/: eeprom_at24c.rs  lib.rs  smbus_eeprom.rs
hw/intc/: Cargo.toml
hw/intc/src/: aclint.rs  aplic.rs  dintc.rs  eiointc.rs  imsic.rs  ipi.rs  lib.rs  liointc.rs  pch_msi.rs  pch_pic.rs  plic.rs
hw/intc/tests/: aclint_tests.rs  plic_tests.rs
hw/loongarch/: Cargo.toml
hw/loongarch/src/: boot.rs  interrupt.rs  iocsr.rs  lib.rs  virt_machine.rs
hw/misc/: Cargo.toml
hw/misc/src/: cmgcr.rs  cpc.rs  led.rs  lib.rs  pl050.rs  pvpanic.rs  sifive_e_aon.rs  sifive_e_prci.rs  sifive_u_otp.rs  sifive_u_prci.rs  unimp.rs  virt_ctrl.rs
hw/riscv/: Cargo.toml  build.rs
hw/riscv/src/: boot.rs  k230.rs  k230_boot.rs  k230_dtb.rs  k230_gzip_dma.rs  k230_pufs.rs  lib.rs  ref_machine.rs  sbi.rs  sifive_test.rs
hw/riscv/tests/: ref_machine_tests.rs
hw/rtc/: Cargo.toml
hw/rtc/src/: ds1338.rs  goldfish_rtc.rs  lib.rs  ls7a_rtc.rs  pl031.rs
hw/sd/: Cargo.toml
hw/sd/src/: card.rs  lib.rs  pl181.rs  sdhci.rs  ssi_sd.rs
hw/sensor/: Cargo.toml
hw/sensor/src/: lib.rs  tmp105.rs  tmp421.rs
hw/ssi/: Cargo.toml
hw/ssi/src/: lib.rs  m25p80.rs  pl022.rs  sifive_spi.rs
hw/storage/: Cargo.toml
hw/storage/src/: lib.rs  (+1 more)
hw/timer/: Cargo.toml
hw/timer/src/: lib.rs  sifive_pwm.rs  sse_counter.rs  sse_timer.rs
hw/virtio/: Cargo.toml
hw/virtio/src/: block.rs  lib.rs  mmio.rs  net.rs  queue.rs
hw/watchdog/: Cargo.toml
hw/watchdog/src/: k230.rs  lib.rs
memory/src/: address_space.rs  flat_view.rs  region.rs
monitor/src/: hmp.rs  mmp.rs  service.rs
pc-bios/k230-linux/: README.md  k230.dtb
scripts/: check-agent-skills.py  gen_pptx.py  gen_pptx_shapes.py  publish.sh  run-rcore-tutorial-smoke.sh  run-riscv-tests.sh
src/: difftest.rs  main.rs
system/: Cargo.toml
system/src/: cpus.rs  gdb.rs  gdb_csr.rs  lib.rs  loongarch_cpu.rs
tests/: Cargo.toml
tests/firmware/: sifive_reset.S  sifive_reset.elf
tests/fixtures/loongarch_privacy_fail/: Cargo.toml
tests/fixtures/loongarch_privacy_fail/src/: lib.rs
tests/mtest/: Cargo.toml
tests/mtest/src/: lib.rs
tests/src/: accel_timer.rs  arch_exit.rs  cli_bios.rs  cli_drive.rs  cli_help.rs  cli_initrd.rs  cli_kernel.rs  cli_netdev.rs  cli_ram.rs  cli_smp.rs  core_address.rs  disas_bitmanip.rs  gdbstub.rs  hw_aclint.rs  hw_chardev.rs  hw_clock.rs  hw_dma.rs  hw_eiointc.rs  hw_fdt.rs  hw_firmware.rs  hw_gpio.rs  hw_i2c.rs  hw_intc_loongarch.rs  hw_intc_riscv.rs  hw_ipi.rs  hw_irq.rs  hw_k230_gzip_dma.rs  hw_k230_machine.rs  hw_k230_pufs.rs  hw_k230_wdt.rs  hw_loader.rs  hw_misc.rs  hw_mom.rs  hw_pch_pic.rs  hw_pflash.rs  hw_plic.rs  hw_qdev.rs  hw_ref_machine.rs  hw_rtc.rs  hw_sd.rs  (+44 more)
tests/src/backend/: code_buffer.rs  x86_64.rs  x86_64_ext.rs
tests/src/core/: context.rs  label.rs  mdev.rs  mod.rs  mom.rs  op.rs  opcode.rs  regset.rs  serialize.rs  tb.rs  temp.rs  types.rs
tests/src/decode/: mod.rs
tests/src/exec/: mod.rs  mttcg.rs  multi_vcpu.rs
tests/src/frontend/: difftest.rs  mod.rs  riscv_zba.rs  riscv_zbb.rs  riscv_zbc.rs  riscv_zbs.rs
tests/src/integration/: advanced_tests.rs  basic_tests.rs  generated_and_complex_tests.rs  mod.rs
tests/src/softfloat/: edge_cases.rs
tests/src/tools/: mod.rs
tools/irbackend/: Cargo.toml
tools/irdump/: Cargo.toml
tools/oracle/: Cargo.toml
tools/oracle/src/: descriptors.rs  lib.rs  qemu.rs
tools/oracle/tests/: probe_cli.rs
util/src/: trace.rs
(+28 files in other folders)
