[workspace]
members = [
    "core",
    "accel",
    "guest/riscv",
    "decode",
    "disas",
    "tests",
    "tools/irdump",
    "tools/irbackend",
    "util",
    "memory",
    "monitor",
    "system",
    "hw/core",
    "hw/intc",
    "hw/char",
    "hw/riscv",
    "hw/virtio",
    "tests/mtest",
    "tools/difftest",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
machina-core        = { version = "0.1.0", path = "core" }
machina-decode      = { version = "0.1.0", path = "decode" }
machina-disas       = { version = "0.1.0", path = "disas" }
machina-util        = { version = "0.1.0", path = "util" }
machina-difftest    = { version = "0.1.0", path = "tools/difftest" }
machina-memory      = { version = "0.1.0", path = "memory" }
machina-hw-core     = { version = "0.1.0", path = "hw/core" }
machina-monitor     = { version = "0.1.0", path = "monitor" }
machina-accel       = { version = "0.1.0", path = "accel" }
machina-guest-riscv = { version = "0.1.0", path = "guest/riscv" }
machina-hw-char     = { version = "0.1.0", path = "hw/char" }
machina-hw-intc     = { version = "0.1.0", path = "hw/intc" }
machina-hw-virtio   = { version = "0.1.0", path = "hw/virtio" }
machina-system      = { version = "0.1.0", path = "system" }
machina-hw-riscv    = { version = "0.1.0", path = "hw/riscv" }
machina-tests       = { version = "0.1.0", path = "tests" }
machina-mtest       = { version = "0.1.0", path = "tests/mtest" }
machina-irdump      = { version = "0.1.0", path = "tools/irdump" }
machina-irbackend   = { version = "0.1.0", path = "tools/irbackend" }

# External dependencies
libc        = "0.2"
serde_json  = "1"
tempfile    = "3"

[package]
name = "machina"
version = "0.1.0"
edition = "2021"
description = "CLI entry point for the Machina RISC-V full-system emulator"
license = "MIT"
repository = "https://github.com/gevico/machina"
authors = ["Chao Liu <chao.liu.zevorn@gmail.com>"]

[[bin]]
name = "machina"
path = "src/main.rs"

[features]
default = ["embed-firmware"]
embed-firmware = ["machina-hw-riscv/embed-firmware"]

[dependencies]
machina-core     = { workspace = true }
machina-accel    = { workspace = true }
machina-memory   = { workspace = true }
machina-hw-riscv = { workspace = true }
machina-system   = { workspace = true }
machina-difftest = { workspace = true }
machina-monitor  = { workspace = true }
machina-hw-core  = { workspace = true }
libc             = { workspace = true }
