[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/gevico/machina"
authors = ["Chao Liu <chao.liu.zevorn@gmail.com>"]

[workspace]
members = [
    "core",
    "accel",
    "guest/riscv",
    "guest/loongarch",
    "decode",
    "disas",
    "tests",
    "tools/irdump",
    "tools/irbackend",
    "util",
    "memory",
    "monitor",
    "gdbstub",
    "system",
    "hw/core",
    "hw/intc",
    "hw/char",
    "hw/riscv",
    "hw/loongarch",
    "hw/virtio",
    "hw/ssi",
    "hw/i2c",
    "hw/sd",
    "hw/timer",
    "hw/firmware",
    "hw/storage",
    "hw/misc",
    "hw/gpio",
    "tests/mtest",
    "tools/oracle",
    "tools/difftest",
    "softfloat",
]
resolver = "2"

[workspace.dependencies]
# Internal crates — version required for crates.io publish
machina-softfloat   = { version = "0.1.2", path = "softfloat" }
machina-core        = { version = "0.1.2", path = "core" }
machina-decode      = { version = "0.1.2", path = "decode" }
machina-disas       = { version = "0.1.2", path = "disas" }
machina-util        = { version = "0.1.2", path = "util" }
machina-difftest    = { version = "0.1.2", path = "tools/difftest" }
machina-memory      = { version = "0.1.2", path = "memory" }
machina-hw-core     = { version = "0.1.2", path = "hw/core" }
machina-monitor     = { version = "0.1.2", path = "monitor" }
machina-accel       = { version = "0.1.2", path = "accel" }
machina-guest-riscv = { version = "0.1.2", path = "guest/riscv" }
machina-guest-loongarch = { version = "0.1.2", path = "guest/loongarch" }
machina-hw-char     = { version = "0.1.2", path = "hw/char" }
machina-hw-intc     = { version = "0.1.2", path = "hw/intc" }
machina-hw-virtio   = { version = "0.1.2", path = "hw/virtio" }
machina-system      = { version = "0.1.2", path = "system" }
machina-gdbstub     = { version = "0.1.2", path = "gdbstub" }
machina-hw-riscv    = { version = "0.1.2", path = "hw/riscv" }
machina-hw-loongarch = { version = "0.1.2", path = "hw/loongarch" }
machina-hw-ssi      = { version = "0.1.2", path = "hw/ssi" }
machina-hw-i2c      = { version = "0.1.2", path = "hw/i2c" }
machina-hw-sd       = { version = "0.1.2", path = "hw/sd" }
machina-hw-timer    = { version = "0.1.2", path = "hw/timer" }
machina-hw-firmware = { version = "0.1.2", path = "hw/firmware" }
machina-hw-storage  = { version = "0.1.2", path = "hw/storage" }
machina-hw-misc     = { version = "0.1.2", path = "hw/misc" }
machina-hw-gpio     = { version = "0.1.2", path = "hw/gpio" }
machina-oracle      = { version = "0.1.2", path = "tools/oracle" }
machina-tests       = { version = "0.1.2", path = "tests" }
machina-mtest       = { version = "0.1.2", path = "tests/mtest" }
machina-irdump      = { version = "0.1.2", path = "tools/irdump" }
machina-irbackend   = { version = "0.1.2", path = "tools/irbackend" }

# External dependencies
libc        = "0.2"
memmap2     = "0.9"
serde_json  = "1"
tempfile    = "3"
parking_lot = "0.12"
sbi-spec    = { version = "0.0.8", features = ["legacy"] }
flate2      = "1"

[package]
name = "machina-emu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI entry point for the Machina RISC-V full-system emulator"

[[bin]]
name = "machina"
path = "src/main.rs"

[features]
default = ["embed-firmware"]
embed-firmware = ["machina-hw-riscv/embed-firmware"]

[dependencies]
machina-core     = { workspace = true }
machina-accel    = { workspace = true }
machina-memory   = { workspace = true }
machina-hw-riscv = { workspace = true }
machina-hw-loongarch = { workspace = true }
machina-guest-loongarch = { workspace = true }
machina-system   = { workspace = true }
machina-difftest = { workspace = true }
machina-monitor  = { workspace = true }
machina-hw-core  = { workspace = true }
machina-gdbstub  = { workspace = true }
machina-util     = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[profile.release]
debug = 1

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

[lints]
workspace = true
