[package]
name = "machina-core"
version.workspace = true
edition.workspace = true
description = "Core IR definitions, CPU traits, and address types for the Machina RISC-V emulator"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "jit", "ir"]
categories = ["emulators"]

[dependencies]
parking_lot = { workspace = true }
