[package]
name = "machina-system"
version.workspace = true
edition.workspace = true
description = "Full-system CPU bridge, CPU manager, and WFI handling"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "system", "cpu"]
categories = ["emulators"]

[dependencies]
machina-core = { workspace = true }
machina-accel = { workspace = true }
machina-guest-riscv = { workspace = true }
machina-memory = { workspace = true }
machina-gdbstub = { workspace = true }
