[package]
name = "machina-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
machina-accel = { workspace = true }
machina-guest-riscv = { workspace = true }
machina-decode = { workspace = true }
machina-system = { workspace = true }
machina-memory = { workspace = true }
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-hw-intc = { workspace = true }
machina-hw-char = { workspace = true }
machina-hw-riscv = { workspace = true }
machina-hw-virtio = { workspace = true }
machina-monitor = { workspace = true }
machina-softfloat = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
