[package]
name = "machina-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
machina-accel = { workspace = true }
machina-guest-riscv = { workspace = true }
machina-guest-loongarch = { workspace = true }
machina-decode = { workspace = true }
machina-system = { workspace = true }
machina-memory = { workspace = true }
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-hw-intc = { workspace = true }
machina-hw-char = { workspace = true }
machina-hw-loongarch = { workspace = true }
machina-hw-riscv = { workspace = true }
machina-hw-ssi = { workspace = true }
machina-hw-i2c = { workspace = true }
machina-hw-sd = { workspace = true }
machina-hw-timer = { workspace = true }
machina-hw-firmware = { workspace = true }
machina-hw-storage = { workspace = true }
machina-hw-dma = { workspace = true }
machina-hw-sensor = { workspace = true }
machina-hw-watchdog = { workspace = true }
machina-hw-misc = { workspace = true }
machina-hw-gpio = { workspace = true }
machina-hw-rtc = { workspace = true }
machina-oracle = { workspace = true }
machina-hw-virtio = { workspace = true }
machina-disas = { workspace = true }
machina-monitor = { workspace = true }
machina-gdbstub = { workspace = true }
machina-softfloat = { workspace = true }
machina-util = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
flate2 = { workspace = true }

[lints]
workspace = true
