[package]
name = "machina-hw-char"
version.workspace = true
edition.workspace = true
description = "UART 16550A serial device model"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "uart", "serial"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-memory = { workspace = true }
parking_lot = { workspace = true }
