[package]
name = "machina-hw-core"
version.workspace = true
edition.workspace = true
description = "Device infrastructure providing qdev framework, IRQ routing, chardev, and FDT generation"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "device", "qdev"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core-macros = { workspace = true }
machina-memory = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
