[package]
name = "machina-hw-i2c"
version.workspace = true
edition.workspace = true
description = "I2C bus infrastructure for Machina device models"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "i2c", "smbus"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }

[lints]
workspace = true
