[package]
name = "machina-hw-intc"
version.workspace = true
edition.workspace = true
description = "RISC-V interrupt controllers: PLIC and ACLINT (MTIMER + MSWI)"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "interrupt", "plic"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-memory = { workspace = true }
parking_lot = { workspace = true }
