[package]
name = "machina-hw-loongarch"
version.workspace = true
edition.workspace = true
description = "LoongArch virt machine with boot flow and device integration"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["loongarch", "emulator", "machine", "virt"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-hw-intc = { workspace = true }
machina-hw-char = { workspace = true }
machina-memory = { workspace = true }
machina-guest-loongarch = { workspace = true }
machina-hw-virtio = { workspace = true }

[lints]
workspace = true
