[package]
name = "machina-hw-loongarch"
version.workspace = true
edition.workspace = true
description = "LoongArch reference machine with boot flow and device integration"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["loongarch", "emulator", "machine", "virt"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-hw-intc = { workspace = true }
machina-hw-char = { workspace = true }
machina-hw-firmware = { workspace = true }
machina-hw-rtc = { workspace = true }
machina-hw-storage = { workspace = true }
machina-memory = { workspace = true }
machina-guest-loongarch = { workspace = true }
machina-hw-virtio = { workspace = true }
flate2 = { workspace = true }

[lints]
workspace = true
