[package]
name = "machina-hw-misc"
version.workspace = true
edition.workspace = true
description = "Miscellaneous simple devices for Machina"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "misc"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-accel = { workspace = true }
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-memory = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
