[package]
name = "machina-hw-riscv"
version = "0.1.0"
edition = "2021"

[features]
embed-firmware = []

[dependencies]
machina-core = { path = "../../core" }
machina-hw-core = { path = "../core" }
machina-hw-intc = { path = "../intc" }
machina-hw-char = { path = "../char" }
machina-memory = { path = "../../memory" }
machina-guest-riscv = { path = "../../guest/riscv" }
machina-hw-virtio = { path = "../virtio" }
