[package]
name = "machina-hw-riscv"
version.workspace = true
edition.workspace = true
description = "RISC-V reference machine with boot flow, SBI firmware interface, and device integration"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "machine", "sbi"]
categories = ["emulators", "hardware-support"]

[features]
embed-firmware = []

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-hw-firmware = { workspace = true }
machina-hw-intc = { workspace = true }
machina-hw-char = { workspace = true }
machina-hw-misc = { workspace = true }
machina-hw-rtc = { workspace = true }
machina-hw-storage = { workspace = true }
machina-hw-watchdog = { workspace = true }
machina-memory = { workspace = true }
machina-guest-riscv = { workspace = true }
machina-hw-virtio = { workspace = true }
sbi-spec = { workspace = true }

[lints]
workspace = true
