[package]
name = "machina-hw-sd"
version.workspace = true
edition.workspace = true
description = "SD/MMC bus infrastructure for Machina device models"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["riscv", "emulator", "sd", "mmc", "sdhci"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-hw-ssi = { workspace = true }
machina-hw-storage = { workspace = true }
machina-memory = { workspace = true }

[lints]
workspace = true
