[package]
name = "machina-hw-sensor"
version.workspace = true
edition.workspace = true
description = "Sensor devices for Machina"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["emulator", "sensor", "i2c"]
categories = ["emulators", "hardware-support"]

[dependencies]
machina-core = { workspace = true }
machina-hw-core = { workspace = true }
machina-hw-i2c = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
