[package]
name = "machina-mtest"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
machina-core = { workspace = true }
machina-hw-watchdog = { workspace = true }
machina-hw-riscv = { workspace = true }
machina-memory = { workspace = true }
machina-oracle = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
