[package]
name = "machina-oracle"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
libc = { workspace = true }
machina-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[[bin]]
name = "machina-qemu-hw-probe"
path = "src/bin/machina-qemu-hw-probe.rs"

[lints]
workspace = true
