[package]
name = "machina-hw-core-macros"
version.workspace = true
edition.workspace = true
description = "Proc macros for Machina hardware device model helpers"
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
